--- a/css/less/custom/_font.less
+++ b/css/less/custom/_font.less
@@ -1,53 +1,41 @@
 //@iconVersion: "v1.0";
 
-@import url(https://fonts.googleapis.com/css?family=Fira+Sans:400|Noto+Serif);
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700);
 
 @font-face {
-	font-family: 'FiraSans-Thin' ;
-	src: url('@{baseUrl}/font/FiraSans-Thin.eot');
-	src: url('@{baseUrl}/font/FiraSans-Thin.eot?#iefix') format('embedded-opentype'),
-		url('@{baseUrl}/font/FiraSans-Thin.woff') format('woff'),
-		url('@{baseUrl}/font/FiraSans-Thin.ttf') format('truetype');
+	font-family: 'SourceSansPro-Light' ;
+	src: url('@{baseUrl}/font/SourceSansPro-Light.eot');
+	src: url('@{baseUrl}/font/SourceSansPro-Light.eot?#iefix') format('embedded-opentype'),
+		url('@{baseUrl}/font/SourceSansPro-Light.woff') format('woff'),
+		url('@{baseUrl}/font/SourceSansPro-Light.ttf') format('truetype');
 	font-weight: 100;
 	font-style: normal;
 	font-stretch: normal;
 }
 @font-face {
-	font-family: 'FiraSans-Regular' ;
-	src: url('@{baseUrl}/font/FiraSans-Regular.eot');
-	src: url('@{baseUrl}/font/FiraSans-Regular.eot?#iefix') format('embedded-opentype'),
-		url('@{baseUrl}/font/FiraSans-Regular.woff') format('woff'),
-		url('@{baseUrl}/font/FiraSans-Regular.ttf') format('truetype');
+	font-family: 'SourceSansPro-Regular' ;
+	src: url('@{baseUrl}/font/Source+Sans-Regular.eot');
+	src: url('@{baseUrl}/font/Source+Sans-Regular.eot?#iefix') format('embedded-opentype'),
+		url('@{baseUrl}/font/Source+Sans-Regular.woff') format('woff'),
+		url('@{baseUrl}/font/Source+Sans-Regular.ttf') format('truetype');
 	font-weight: 400;
 	font-style: normal;
 	font-stretch: normal;
 }
 @font-face {
-	font-family: 'FiraSans-Heavy' ;
-	src: url('@{baseUrl}/font/FiraSans-Heavy.eot');
-	src: url('@{baseUrl}/font/FiraSans-Heavy.eot?#iefix') format('embedded-opentype'),
-		url('@{baseUrl}/font/FiraSans-Heavy.woff') format('woff'),
-		url('@{baseUrl}/font/FiraSans-Heavy.ttf') format('truetype');
+	font-family: 'SourceSansPro-Bold' ;
+	src: url('@{baseUrl}/font/SourceSansPro-Bold.eot');
+	src: url('@{baseUrl}/font/SourceSansPro-Bold.eot?#iefix') format('embedded-opentype'),
+		url('@{baseUrl}/font/SourceSansPro-Bold.woff') format('woff'),
+		url('@{baseUrl}/font/SourceSansPro-Bold.ttf') format('truetype');
 	font-weight: 900;
 	font-style: normal;
 	font-stretch: normal;
 }
-/*@font-face {
-	font-family: 'mentorama-@{iconVersion}' ;
-	src: url('@{baseUrl}/font/mentorama-@{iconVersion}.eot');
-	src: url('@{baseUrl}/font/mentorama-@{iconVersion}.eot?#iefix') format('embedded-opentype'),
-		//url('@{baseUrl}/font/mentorama-@{iconVersion}.woff2') format('woff2'),
-		url('@{baseUrl}/font/mentorama-@{iconVersion}.woff') format('woff'),
-		url('@{baseUrl}/font/mentorama-@{iconVersion}.ttf') format('truetype'),
-		url('@{baseUrl}/font/mentorama-@{iconVersion}.svg#mentorama-@{iconVersion}') format('svg');
-	font-weight: 500;
-	font-style: normal;
-	font-stretch: normal;
-}*/
 
-.sansLight{ font-family: "FiraSans-Thin", "Open Sans", Helvetica, sans-serif; font-weight: 100; -webkit-font-smoothing: antialiased;}
-.sans{ font-family: "Fira Sans", "Open Sans", Helvetica, sans-serif; font-weight: 400; -webkit-font-smoothing: antialiased;}
-.sansBold{ font-family: "FiraSans-Heavy", "Open Sans", Helvetica, sans-serif; font-weight: 900; -webkit-font-smoothing: antialiased;}
+.sansLight{ font-family: "SourceSansPro-Light", "Open Sans", Helvetica, sans-serif; font-weight: 100; -webkit-font-smoothing: antialiased;}
+.sans{ font-family: "SourceSansPro-Regular", "Open Sans", Helvetica, sans-serif; font-weight: 400; -webkit-font-smoothing: antialiased;}
+.sansBold{ font-family: "SourceSansPro-Bold", "Open Sans", Helvetica, sans-serif; font-weight: 900; -webkit-font-smoothing: antialiased;}
 .serif{ font-family: "Noto Serif", Georgia, serif; font-weight: 400; -webkit-font-smoothing: antialiased;}
 
 .font-family{ .sans;}
