new hero section

--- a/css/less/custom/_variables.less
+++ b/css/less/custom/_variables.less
@@ -37,7 +37,7 @@
 @ndLink: @blue;
 
 // Background
-@bgcolor: #fcfbf9; //Background
+@bgcolor: #FFFFFF; //Background
 @bgcolor2: #f0ebeb; //Related Posts background (1x)
 
 // Inputs
