--- a/css/less/page/intro.less
+++ b/css/less/page/intro.less
@@ -1,7 +1,8 @@
 ﻿/* INTRO ------------------------------ */
-.intro{ min-height: 572px;
-	.site-title{ position: relative; top: 5px; display: block; .sansBold; font-size: 62px; letter-spacing: -3.62px; margin-top: @vSpace*4; text-transform: uppercase;}
-	.site-description{ display: block; .serif; font-size: 30px; margin-top: @vSpace; margin-bottom: @vSpace; padding-right: 35%;}
+.intro{ background-color: #f7f8fa; border-bottom: 100px solid @white; 
+	.container{ background: url('@{baseUrl}/img/fabiozc.png') no-repeat right bottom; background-size: contain; min-height: 480px;}
+	.site-title{ position: relative; top: 5px; display: block; .sans; font-size: 62px; margin-top: @vSpace*3.5;}
+	.site-description{ display: block; .sansLight; font-size: 30px; margin-top: @vSpace/2; margin-bottom: @vSpace; padding-right: 40%;}
 	.header-button{ .btn-primary; margin-right: @margin - 3px;}
 	.header-link{ .btn-secondary; margin-right: @margin;}
 	.intro-img{ float: right; margin-top: -@vSpace*2; -webkit-filter: drop-shadow(0 25px 30px rgba(0,0,0,.25)); filter: drop-shadow(0 25px 30px rgba(0,0,0,.25));}
