--- a/css/less/page/intro.less
+++ b/css/less/page/intro.less
@@ -1,8 +1,8 @@
 ﻿/* INTRO ------------------------------ */
-.intro{ background-color: #f7f8fa; border-bottom: 100px solid @white; 
+.intro{ background-color: #f7f8fa;
 	.container{ background: url('@{baseUrl}/img/fabiozc.png') no-repeat right bottom; background-size: contain; min-height: 480px;}
-	.site-title{ position: relative; top: 5px; display: block; .sans; font-size: 62px; margin-top: @vSpace*3.5;}
-	.site-description{ display: block; .sansLight; font-size: 30px; margin-top: @vSpace/2; margin-bottom: @vSpace; padding-right: 40%;}
+	.site-title{ position: relative; top: 5px; display: block; .sans; font-size: 68px; margin-top: @vSpace*4;}
+	.site-description{ display: block; .sansLight; font-size: 36px; margin-top: @vSpace/2; margin-bottom: @vSpace; padding-right: 40%;}
 	.header-button{ .btn-primary; margin-right: @margin - 3px;}
 	.header-link{ .btn-secondary; margin-right: @margin;}
 	.intro-img{ float: right; margin-top: -@vSpace*2; -webkit-filter: drop-shadow(0 25px 30px rgba(0,0,0,.25)); filter: drop-shadow(0 25px 30px rgba(0,0,0,.25));}
