temporary fix for section titles

--- a/css/less/page/_basic.less
+++ b/css/less/page/_basic.less
@@ -42,8 +42,8 @@ body > section{ .clearfix;}
 .portfolio,
 .contact,
 .about{ padding-bottom: @vSpace*2;} 
-.section-title{ position: relative; top: 13px; z-index: 0; color: rgba(74,74,74,.1); display: block; .sansLight; font-size: 194px; letter-spacing: -6.33px; text-align: right; text-transform: uppercase;}
-.section-help{ .sansBold; font-size: @largestFont; position: relative; top: 2px; z-index: 1;}
+.section-title{ position: relative; top: 5px; left: -10px; z-index: 0; color: rgba(100,100,100,.1); display: block; .sansLight; font-size: 140px; letter-spacing: -10px; text-align: left; text-transform: uppercase;}
+.section-help{ .sans; font-size: @largestFont; position: relative; z-index: 1;}
 .section-subtitle{ .serif; font-size: @largerFont; margin: 0 0 @vSpace; text-align: center;}
 .text-title{ font-size: @smallFont; .sansLight; letter-spacing: 4px; margin: @vSpace 0 0 0; text-transform: uppercase;}
 .nav{ height: @vSpace;
