--- a/css/less/page/intro.less
+++ b/css/less/page/intro.less
@@ -1,9 +1,5 @@
 ﻿/* INTRO ------------------------------ */
-.intro{ background-color: #f7f8fa;
-	.container{ background: url('@{baseUrl}/img/fabiozc.png') no-repeat right bottom; background-size: contain; min-height: 480px;}
-	.site-title{ position: relative; top: 5px; display: block; .sans; font-size: 68px; margin-top: @vSpace*4;}
-	.site-description{ display: block; .sansLight; font-size: 36px; margin-top: @vSpace/2; margin-bottom: @vSpace; padding-right: 40%;}
-	.header-button{ .btn-primary; margin-right: @margin - 3px;}
-	.header-link{ .btn-secondary; margin-right: @margin;}
-	.intro-img{ float: right; margin-top: -@vSpace*2; -webkit-filter: drop-shadow(0 25px 30px rgba(0,0,0,.25)); filter: drop-shadow(0 25px 30px rgba(0,0,0,.25));}
+.intro{ background: url('@{baseUrl}/img/fabiozc.png') no-repeat right top; min-height: @introHeight;
+	.intro-title{ display: block; .sans; font-size: @heroFont; line-height: 1; margin-top: @vSpace*2.83;}
+	.intro-description{ display: block; .sansLight; font-size: 36px; margin: 15px 0 0 -4px; padding-right: 35%;}
 }
