--- a/css/less/custom/_font.less
+++ b/css/less/custom/_font.less
@@ -3,21 +3,21 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700);
 
 @font-face {
-	font-family: 'SourceSansPro-Light' ;
-	src: url('@{baseUrl}/font/SourceSansPro-Light.eot');
-	src: url('@{baseUrl}/font/SourceSansPro-Light.eot?#iefix') format('embedded-opentype'),
-		url('@{baseUrl}/font/SourceSansPro-Light.woff') format('woff'),
-		url('@{baseUrl}/font/SourceSansPro-Light.ttf') format('truetype');
+	font-family: 'SourceSansPro-ExtraLight' ;
+	src: url('@{baseUrl}/font/SourceSansPro-ExtraLight.eot');
+	src: url('@{baseUrl}/font/SourceSansPro-ExtraLight.eot?#iefix') format('embedded-opentype'),
+		url('@{baseUrl}/font/SourceSansPro-ExtraLight.woff') format('woff'),
+		url('@{baseUrl}/font/SourceSansPro-ExtraLight.ttf') format('truetype');
 	font-weight: 100;
 	font-style: normal;
 	font-stretch: normal;
 }
 @font-face {
 	font-family: 'SourceSansPro-Regular' ;
-	src: url('@{baseUrl}/font/Source+Sans-Regular.eot');
-	src: url('@{baseUrl}/font/Source+Sans-Regular.eot?#iefix') format('embedded-opentype'),
-		url('@{baseUrl}/font/Source+Sans-Regular.woff') format('woff'),
-		url('@{baseUrl}/font/Source+Sans-Regular.ttf') format('truetype');
+	src: url('@{baseUrl}/font/SourceSansPro-Regular.eot');
+	src: url('@{baseUrl}/font/SourceSansPro-Regular.eot?#iefix') format('embedded-opentype'),
+		url('@{baseUrl}/font/SourceSansPro-Regular.woff') format('woff'),
+		url('@{baseUrl}/font/SourceSansPro-Regular.ttf') format('truetype');
 	font-weight: 400;
 	font-style: normal;
 	font-stretch: normal;
@@ -33,7 +33,7 @@
 	font-stretch: normal;
 }
 
-.sansLight{ font-family: "SourceSansPro-Light", "Open Sans", Helvetica, sans-serif; font-weight: 100; -webkit-font-smoothing: antialiased;}
+.sansLight{ font-family: "SourceSansPro-ExtraLight", "Open Sans", Helvetica, sans-serif; font-weight: 100; -webkit-font-smoothing: antialiased;}
 .sans{ font-family: "SourceSansPro-Regular", "Open Sans", Helvetica, sans-serif; font-weight: 400; -webkit-font-smoothing: antialiased;}
 .sansBold{ font-family: "SourceSansPro-Bold", "Open Sans", Helvetica, sans-serif; font-weight: 900; -webkit-font-smoothing: antialiased;}
 .serif{ font-family: "Noto Serif", Georgia, serif; font-weight: 400; -webkit-font-smoothing: antialiased;}
