improovement on portfolio section

--- a/css/less/custom/_font.less
+++ b/css/less/custom/_font.less
@@ -35,8 +35,8 @@
 
 .sansLight{ font-family: "SourceSansPro-ExtraLight", "Open Sans", Helvetica, sans-serif; font-weight: 100; -webkit-font-smoothing: antialiased;}
 .sans{ font-family: "SourceSansPro-Regular", "Open Sans", Helvetica, sans-serif; font-weight: 400; -webkit-font-smoothing: antialiased;}
-.sansBold{ font-family: "SourceSansPro-Bold", "Open Sans", Helvetica, sans-serif; font-weight: 900; -webkit-font-smoothing: antialiased;}
-.serif{ font-family: "Noto Serif", Georgia, serif; font-weight: 400; -webkit-font-smoothing: antialiased;}
+.sansBold{ color: @black; -webkit-font-smoothing: antialiased;}
+.serif{ font-family: Georgia, serif; font-weight: 400; -webkit-font-smoothing: antialiased;}
 
 .font-family{ .sans;}
 //.font-icon{ font-family: 'mentorama-@{iconVersion}'; -webkit-font-smoothing: antialiased; -moz-font-smoothing: antialiased; -ms-font-smoothing: antialiased; font-weight: normal; }
