--- a/css/less/custom/_grid.less
+++ b/css/less/custom/_grid.less
@@ -1,5 +1,5 @@
 ﻿// Tablets & small desktops only
-@gutter: @margin;
+@gutter: 30px;
 @grid: 70px;
 @grid2: @grid*2 + @gutter;
 @grid3: @grid*3 + @gutter*2;
