--- a/css/less/page/intro.less
+++ b/css/less/page/intro.less
@@ -1,5 +1,5 @@
 ﻿/* INTRO ------------------------------ */
 .intro{ background: url('@{baseUrl}/img/fabiozc.png') no-repeat right top; min-height: @introHeight;
-	.intro-title{ display: block; .sans; font-size: @heroFont; line-height: 1; margin-top: @vSpace*2.83;}
-	.intro-description{ display: block; .sansLight; font-size: 36px; margin: 15px 0 0 -4px; padding-right: 35%;}
+	.intro-title{ display: block; .sans; font-size: @heroFont; line-height: 1; margin-top: @vSpace*2.87;}
+	.intro-description{ display: block; .sansLight; font-size: @largerFont; margin: 15px 0 0 3px; padding-right: 10%;}
 }
