--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,7 @@
 /*** FABIOZC ***/
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700);
 strong {
-  font-family: "SourceSansPro-Bold", "Open Sans", Helvetica, sans-serif;
-  font-weight: 900;
+  color: #000;
   -webkit-font-smoothing: antialiased;
   -moz-font-smoothing: antialiased;
   -ms-font-smoothing: antialiased;
@@ -131,7 +130,7 @@ input {
   height: 1.7;
   padding: 4px 6px;
   margin-bottom: 9px;
-  font-size: 18px;
+  font-size: 22px;
   line-height: 1.7;
   color: #888888;
   border-radius: 4px;
@@ -219,12 +218,11 @@ textarea {
   -webkit-font-smoothing: antialiased;
 }
 .sansBold {
-  font-family: "SourceSansPro-Bold", "Open Sans", Helvetica, sans-serif;
-  font-weight: 900;
+  color: #000;
   -webkit-font-smoothing: antialiased;
 }
 .serif {
-  font-family: "Noto Serif", Georgia, serif;
+  font-family: Georgia, serif;
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
 }
@@ -234,8 +232,7 @@ textarea {
   -webkit-font-smoothing: antialiased;
 }
 .bold {
-  font-family: "SourceSansPro-Bold", "Open Sans", Helvetica, sans-serif;
-  font-weight: 900;
+  color: #000;
   -webkit-font-smoothing: antialiased;
   -moz-font-smoothing: antialiased;
   -ms-font-smoothing: antialiased;
@@ -265,7 +262,7 @@ textarea {
 }
 html {
   overflow-x: hidden;
-  font-size: 18px;
+  font-size: 22px;
   line-height: 1.7;
   height: 100%;
 }
@@ -302,7 +299,7 @@ img {
   text-decoration: none;
 }
 ::selection {
-  background: #ef2600;
+  background: #ff4623;
   color: #FFF;
   text-shadow: none;
 }
@@ -328,7 +325,7 @@ img {
 .main-section:not(.intro) {
   position: relative;
   background-color: #FFF;
-  padding-bottom: 120px;
+  padding-bottom: 60px;
 }
 .main-section:nth-child(1) {
   position: fixed;
@@ -340,36 +337,23 @@ img {
 }
 .main-section:nth-child(2) {
   margin-top: 480px;
-  padding-top: 80px;
+  padding-top: 60px;
 }
-.section-title {
-  color: rgba(100, 100, 100, 0.1);
+.section-title,
+.section-subtitle {
   display: block;
   font-family: "SourceSansPro-ExtraLight", "Open Sans", Helvetica, sans-serif;
   font-weight: 100;
   -webkit-font-smoothing: antialiased;
-  font-size: 2.4rem;
+  font-size: 1.9rem;
+  margin: 0 0 30px;
   text-align: left;
-  text-transform: uppercase;
-}
-.section-help {
-  font-family: "SourceSansPro-Regular", "Open Sans", Helvetica, sans-serif;
-  font-weight: 400;
-  -webkit-font-smoothing: antialiased;
-  font-size: 1.7rem;
-  position: relative;
-  z-index: 1;
 }
 .section-subtitle {
-  font-family: "Noto Serif", Georgia, serif;
-  font-weight: 400;
-  -webkit-font-smoothing: antialiased;
-  font-size: 1.9rem;
-  margin: 0 0 60px;
-  text-align: center;
+  font-size: 1.7rem;
 }
 .text-title {
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   font-family: "SourceSansPro-ExtraLight", "Open Sans", Helvetica, sans-serif;
   font-weight: 100;
   -webkit-font-smoothing: antialiased;
@@ -377,104 +361,8 @@ img {
   margin: 60px 0 0 0;
   text-transform: uppercase;
 }
-.nav {
-  height: 60px;
-}
-.nav a {
-  border-bottom: 2px solid transparent;
-  border-top: 2px solid transparent;
-  border-radius: 2px;
-  display: inline-block;
-  font-size: 0.8rem;
-  line-height: 40px;
-  margin: 0 10px 0 0;
-  padding: 0 20px;
-  text-transform: uppercase;
-}
-.nav a:hover {
-  background-color: #ff4623;
-  color: #FFF;
-}
-.nav a.active {
-  border-bottom-color: #7989dd;
-  border-radius: 0px;
-  color: #7989dd;
-  cursor: default;
-}
-.nav a.active:hover {
-  background-color: transparent;
-}
-.nav-controls {
-  position: absolute;
-  left: 0;
-  right: 0;
-}
-.nav-controls .nav-control {
-  position: absolute;
-  top: -433px;
-  color: transparent;
-  cursor: pointer;
-  display: inline-block;
-  font-size: 0.6rem;
-  letter-spacing: 2px;
-  text-align: center;
-  text-transform: uppercase;
-  -webkit-transition: all 0.15s linear;
-  transition: all 0.15s linear;
-}
-.nav-controls .nav-control:before {
-  background-color: transparent;
-  color: #ff4623;
-  display: block;
-  font-size: 2.4rem;
-  line-height: 56px;
-  padding: 4px 10px 0;
-}
-.nav-controls .nav-control:hover {
-  color: inherit;
-}
-.nav-controls .nav-control:hover:before {
-  background-color: #ff4623;
-  color: #FFF;
-  -webkit-transition: all 0.15s linear;
-  transition: all 0.15s linear;
-}
-.nav-controls .nav-prev {
-  left: 0;
-  text-align: right;
-}
-.nav-controls .nav-prev:before {
-  content: "←";
-  border-top-right-radius: 2px;
-  border-bottom-right-radius: 2px;
-  margin-right: -5px;
-  padding-left: 20px;
-}
-.nav-controls .nav-prev:hover:before {
-  padding-left: 40px;
-}
-.nav-controls .nav-next {
-  right: 0;
-  text-align: left;
-}
-.nav-controls .nav-next:before {
-  content: "→";
-  border-top-left-radius: 2px;
-  border-bottom-left-radius: 2px;
-  margin-left: -12px;
-  padding-left: 13px;
-  padding-right: 17px;
-}
-.nav-controls .nav-next:hover:before {
-  padding-right: 40px;
-}
-.nav-controls ::selection {
-  background-color: transparent;
-  color: inherit;
-}
 .footer {
-  background-color: #FFF;
-  padding: 120px;
+  padding: 60px;
   text-align: center;
 }
 .footer .btn-portfolio {
@@ -625,6 +513,63 @@ img {
   background-color: #ef2600;
   color: #FFF;
 }
+.atvImg {
+  border-radius: 5px;
+  transform-style: preserve-3d;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+.atvImg img {
+  border-radius: 5px;
+  box-shadow: 0 2px 8px rgba(14, 21, 47, 0.25);
+}
+.atvImg-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  transition: all 0.2s ease-out;
+}
+.atvImg-container.over .atvImg-shadow {
+  box-shadow: 0 45px 100px rgba(14, 21, 47, 0.4), 0 16px 40px rgba(14, 21, 47, 0.4);
+}
+.atvImg-layers {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  overflow: hidden;
+  transform-style: preserve-3d;
+}
+.atvImg-rendered-layer {
+  position: absolute;
+  width: 104%;
+  height: 104%;
+  top: -2%;
+  left: -2%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: transparent;
+  background-size: cover;
+  transition: all 0.1s ease-out;
+}
+.atvImg-shadow {
+  position: absolute;
+  top: 5%;
+  left: 5%;
+  width: 90%;
+  height: 90%;
+  transition: all 0.2s ease-out;
+  box-shadow: 0 8px 30px rgba(14, 21, 47, 0.6);
+}
+.atvImg-shine {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 5px;
+  background: linear-gradient(135deg, rgba(255, 255, 255, 0.25) 0%, rgba(255, 255, 255, 0) 60%);
+}
 /* PAGES ------------------------------- */
 /* INTRO ------------------------------ */
 .intro {
@@ -636,97 +581,30 @@ img {
   font-family: "SourceSansPro-Regular", "Open Sans", Helvetica, sans-serif;
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
-  font-size: 3.8rem;
+  font-size: 3.3rem;
   line-height: 1;
-  margin-top: 169.8px;
+  margin-top: 172.2px;
 }
 .intro .intro-description {
   display: block;
   font-family: "SourceSansPro-ExtraLight", "Open Sans", Helvetica, sans-serif;
   font-weight: 100;
   -webkit-font-smoothing: antialiased;
-  font-size: 36px;
-  margin: 15px 0 0 -4px;
-  padding-right: 35%;
+  font-size: 1.9rem;
+  margin: 15px 0 0 3px;
+  padding-right: 10%;
 }
 /* ABOUT ------------------------------ */
-.about .btn-resume {
-  position: relative;
-  top: 0;
-  border-radius: 2px;
-  display: inline-block;
-  font-family: "SourceSansPro-Regular", "Open Sans", Helvetica, sans-serif;
-  font-weight: 400;
-  -webkit-font-smoothing: antialiased;
-  font-size: 1rem;
-  letter-spacing: 0.8px;
-  line-height: 2.7;
-  margin: 0 0 -1px;
-  padding: 0 40px;
-  text-transform: uppercase;
-  background-color: transparent;
-  box-shadow: inset 0 0 0 1px rgba(255, 70, 35, 0.5);
-  color: rgba(255, 70, 35, 0.7);
-}
-.about .btn-resume:hover {
-  box-shadow: inset 0 0 0 2px #ff4623;
-  color: #ff4623;
-}
-.about .btn-resume:active {
-  background-color: #ef2600;
-  color: #FFF;
-}
-.about .btn-resume:before {
-  content: "⇤";
-  float: left;
-  font-size: 1.7rem;
-  margin: -1px 10px 0 0px;
-  -webkit-transform: rotate(-90deg);
-  -ms-transform: rotate(-90deg);
-  transform: rotate(-90deg);
-}
-.about .btn-contact {
-  position: relative;
-  top: 0;
-  border-radius: 2px;
-  display: inline-block;
-  font-family: "SourceSansPro-Regular", "Open Sans", Helvetica, sans-serif;
-  font-weight: 400;
-  -webkit-font-smoothing: antialiased;
-  font-size: 1rem;
-  letter-spacing: 0.8px;
-  line-height: 2.7;
-  margin: 0 0 -1px;
-  padding: 0 40px;
-  text-transform: uppercase;
-  background-color: transparent;
-  box-shadow: inset 0 0 0 1px rgba(255, 70, 35, 0.5);
-  color: rgba(255, 70, 35, 0.7);
-}
-.about .btn-contact:hover {
-  box-shadow: inset 0 0 0 2px #ff4623;
-  color: #ff4623;
-}
-.about .btn-contact:active {
-  background-color: #ef2600;
-  color: #FFF;
-}
-.about .btn-contact:before {
-  content: "✉";
-  float: left;
-  font-size: 2.4rem;
-  margin: 2px 10px -2px 0px;
-}
 .about .inspiration-list {
-  margin: 60px;
-  text-align: center;
+  margin: 0 0 60px;
+  text-align: left;
 }
 .about .inspiration-list li {
   display: inline-block;
-  font-size: 0.6rem;
+  font-size: 0.55rem;
   letter-spacing: 2px;
   line-height: 120%;
-  margin: 0 -4px 22px 0;
+  margin: 0 -4px 0 0;
   text-transform: uppercase;
   vertical-align: top;
   text-align: center;
@@ -761,7 +639,7 @@ img {
 }
 .about .skills {
   display: block;
-  margin: 120px 20px 60px;
+  margin: 60px 80px 60px;
   text-align: center;
 }
 .about .skills .skill-item {
@@ -770,62 +648,45 @@ img {
   font-family: "SourceSansPro-ExtraLight", "Open Sans", Helvetica, sans-serif;
   font-weight: 100;
   -webkit-font-smoothing: antialiased;
-  font-size: 1.8rem;
+  font-size: 1rem;
   line-height: 1.1;
-  margin: 0 20px;
+  margin: 0 13.33333333px;
 }
 .about .skills .skill-item.largest {
-  font-size: 4.32rem;
+  font-size: 2.7rem;
 }
 .about .skills .skill-item.larger {
-  font-size: 3.42rem;
+  font-size: 1.9rem;
 }
 .about .skills .skill-item.large {
-  font-size: 3.06rem;
+  font-size: 1.7rem;
 }
 .about .skills .skill-item.small {
-  font-size: 1.62rem;
+  font-size: 0.8rem;
 }
 .about .skills .skill-item.smaller {
-  font-size: 1.44rem;
+  font-size: 0.7rem;
 }
 .about .skills .skill-item.smallest {
-  font-size: 1.08rem;
+  font-size: 0.55rem;
 }
 .about .about-intro {
   margin-bottom: 60px;
 }
 .about .about-intro .intro-text {
-  display: inline-block;
-  width: 70%;
-}
-.about .about-intro .twisted {
-  display: inline-block;
-  -webkit-transform: rotate(-5deg);
-  -ms-transform: rotate(-5deg);
-  transform: rotate(-5deg);
-}
-.about .about-intro .btn-intro {
-  display: inline-block;
-  float: right;
-  margin-top: 117px;
-}
-.about .about-intro .btn-intro.btn-contact {
-  margin-top: 57px;
+  display: block;
+  font-size: 1rem;
 }
 /* PORTFOLIO ------------------------------ */
 .portfolio .gallery {
   position: relative;
-  margin: 60px 0 240px;
-  height: 440px;
+  margin: 60px 0 0;
 }
 .portfolio .port-item {
   *zoom: 1;
-  display: none;
-  position: absolute;
-  top: 0;
-  opacity: 0;
   width: 100%;
+  margin-bottom: 60px;
+  min-height: 550px;
 }
 .portfolio .port-item:before,
 .portfolio .port-item:after {
@@ -836,13 +697,8 @@ img {
 .portfolio .port-item:after {
   clear: both;
 }
-.portfolio .port-item.active {
-  -webkit-animation: activePort 2s forwards;
-  -moz-animation: activePort 2s forwards;
-  -ms-animation: activePort 2s forwards;
-  animation: activePort 2s forwards;
-  display: block;
-  z-index: 2;
+.portfolio .port-item:last-child {
+  margin-bottom: 0;
 }
 .portfolio .port-gallery {
   position: absolute;
@@ -850,224 +706,89 @@ img {
   z-index: 1;
   margin-left: 80px;
 }
+.portfolio .port-title {
+  color: #7989dd;
+  font-family: "SourceSansPro-ExtraLight", "Open Sans", Helvetica, sans-serif;
+  font-weight: 100;
+  -webkit-font-smoothing: antialiased;
+  font-size: 2.7rem;
+  line-height: 1;
+  margin: 0 0 0 -6px;
+  text-transform: uppercase;
+  width: 540px;
+}
+.portfolio .port-title .port-wip {
+  font-size: 0.7rem;
+  font-family: "SourceSansPro-Regular", "Open Sans", Helvetica, sans-serif;
+  font-weight: 400;
+  -webkit-font-smoothing: antialiased;
+  letter-spacing: 0px;
+}
+.portfolio .port-tag {
+  display: inline-block;
+  font-size: 0.55rem;
+  letter-spacing: 4px;
+  margin: 0 20px 0 0;
+  text-transform: uppercase;
+}
+.portfolio .port-description {
+  margin: 30px 40px 0 0;
+  width: 540px;
+}
 .portfolio .port-img {
   position: relative;
   background: #F7F7F7;
   border-radius: 3px;
-  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05), 0 35px 40px -15px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05), 0 35px 40px -15px rgba(0, 0, 0, 0.15);
   display: inline-block;
   float: right;
   -webkit-transition: all 0.2s ease;
   transition: all 0.2s ease;
 }
 .portfolio .port-img.port-img-1 {
-  width: 730px;
-  height: 528px;
-  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05), 10px 35px 40px -15px rgba(0, 0, 0, 0.25);
-  margin-right: 20px;
+  width: 580px;
+  height: auto;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05), 0px 35px 40px -15px rgba(0, 0, 0, 0.15);
   transform: perspective(600px) rotateY(-5deg);
 }
 .portfolio .port-img.port-img-2 {
-  width: 400px;
-  height: 528px;
+  width: 322.22222222px;
+  height: auto;
   margin-right: 12px;
 }
 .portfolio .port-img.port-img-2:nth-child(2) {
-  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05), 20px 35px 40px -30px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05), 20px 35px 40px -30px rgba(0, 0, 0, 0.15);
   transform: perspective(600px) rotateY(-5deg);
   left: 90px;
 }
 .portfolio .port-img.port-img-2:nth-child(1) {
-  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05), 30px 35px 40px -30px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05), 30px 35px 40px -30px rgba(0, 0, 0, 0.15);
   transform: perspective(600px) rotateY(-15deg);
 }
 .portfolio .port-img.port-img-3 {
-  width: 290px;
-  height: 528px;
+  width: 237.70491803px;
+  height: auto;
 }
 .portfolio .port-img.port-img-3:nth-child(3) {
   transform: perspective(600px) rotateY(-10deg);
   left: 135px;
 }
 .portfolio .port-img.port-img-3:nth-child(2) {
-  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05), 20px 35px 40px -30px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05), 20px 35px 40px -30px rgba(0, 0, 0, 0.15);
   transform: perspective(600px) rotateY(-20deg);
   left: 85px;
 }
 .portfolio .port-img.port-img-3:nth-child(1) {
-  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05), 30px 35px 40px -30px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05), 30px 35px 40px -30px rgba(0, 0, 0, 0.15);
   transform: perspective(600px) rotateY(-30deg);
 }
 .portfolio .port-gallery:hover .port-img-1,
 .portfolio .port-gallery:hover .port-img-2,
 .portfolio .port-gallery:hover .port-img-3 {
   left: 0;
-  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05), 0px 30px 40px -10px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05), 0px 30px 40px -10px rgba(0, 0, 0, 0.15);
   transform: perspective(600px) rotateY(0deg);
   margin-right: 0;
   margin-left: 40px;
-}
-.portfolio .port-tag {
-  display: inline-block;
-  font-size: 0.6rem;
-  letter-spacing: 4px;
-  margin: 0 20px 0 0;
-  text-transform: uppercase;
-}
-.portfolio .port-title {
-  position: relative;
-  top: 6px;
-  color: #7989dd;
-  font-family: "SourceSansPro-ExtraLight", "Open Sans", Helvetica, sans-serif;
-  font-weight: 100;
-  -webkit-font-smoothing: antialiased;
-  font-size: 62px;
-  letter-spacing: -5px;
-  margin: 58px 0 0 -4px;
-  text-transform: uppercase;
-  width: 510px;
-}
-.portfolio .port-title .port-wip {
-  font-size: 0.8rem;
-  font-family: "SourceSansPro-Regular", "Open Sans", Helvetica, sans-serif;
-  font-weight: 400;
-  -webkit-font-smoothing: antialiased;
-  letter-spacing: 0px;
-  line-height: 14px;
-}
-.portfolio .port-description {
-  margin: 60px 40px 0 0;
-  width: 510px;
-}
-.fade-left {
-  -webkit-animation: fadeOutLeft 1s forwards;
-  -moz-animation: fadeOutLeft 1s forwards;
-  -ms-animation: fadeOutLeft 1s forwards;
-  animation: fadeOutLeft 1s forwards;
-}
-.fade-right {
-  -webkit-animation: fadeOutRight 1s forwards;
-  -moz-animation: fadeOutRight 1s forwards;
-  -ms-animation: fadeOutRight 1s forwards;
-  animation: fadeOutRight 1s forwards;
-}
-.port-active {
-  -webkit-animation: activePort 2s forwards;
-  -moz-animation: activePort 2s forwards;
-  -ms-animation: activePort 2s forwards;
-  animation: activePort 2s forwards;
-}
-@keyframes fadeOutLeft {
-  0% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-  100% {
-    opacity: 0;
-    transform: translateX(-700px);
-  }
-}
-@-webkit-keyframes fadeOutLeft {
-  0% {
-    opacity: 1;
-    -webkit-transform: translateX(0);
-  }
-  100% {
-    opacity: 0;
-    -webkit-transform: translateX(-700px);
-  }
-}
-@-moz-keyframes fadeOutLeft {
-  0% {
-    opacity: 1;
-    -moz-transform: translateX(0);
-  }
-  100% {
-    opacity: 0;
-    -moz-transform: translateX(-700px);
-  }
-}
-@-ms-keyframes fadeOutLeft {
-  0% {
-    opacity: 1;
-    -ms-transform: translateX(0);
-  }
-  100% {
-    opacity: 0;
-    -ms-transform: translateX(-700px);
-  }
-}
-@keyframes fadeOutRight {
-  0% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-  100% {
-    opacity: 0;
-    transform: translateX(700px);
-  }
-}
-@-webkit-keyframes fadeOutRight {
-  0% {
-    opacity: 1;
-    -webkit-transform: translateX(0);
-  }
-  100% {
-    opacity: 0;
-    -webkit-transform: translateX(700px);
-  }
-}
-@-moz-keyframes fadeOutRight {
-  0% {
-    opacity: 1;
-    -moz-transform: translateX(0);
-  }
-  100% {
-    opacity: 0;
-    -moz-transform: translateX(700px);
-  }
-}
-@-ms-keyframes fadeOutRight {
-  0% {
-    opacity: 1;
-    -ms-transform: translateX(0);
-  }
-  100% {
-    opacity: 0;
-    -ms-transform: translateX(700px);
-  }
-}
-@keyframes activePort {
-  0% {
-    opacity: 0;
-    transform: translateX(0);
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@-webkit-keyframes activePort {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@-moz-keyframes activePort {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@-ms-keyframes activePort {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
 }
 /* CONTACT ------------------------------ */
